<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/sensors">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/legend1_container"
            android:layout_height="wrap_content"
            style="@style/legend_view"
            android:orientation="horizontal">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/legend1"
                android:background="#FFFFFFFF"
          />

            <TextView
                android:layout_marginLeft="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor1"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/legend2_container"
            android:layout_height="wrap_content"
            style="@style/legend_view"
            android:orientation="horizontal">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/legend2"
                android:background="#FFFFFFFF"
              />

            <TextView
                android:layout_marginLeft="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/legend_view"
            android:id="@+id/legend3_container"
            android:orientation="horizontal">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/legend3"
                android:background="#FFFFFFFF"
               />

            <TextView
                android:layout_marginLeft="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor3"/>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/legend_view"
            android:id="@+id/legend4_container"
            android:orientation="horizontal">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/legend4"
                android:background="#FFFFFFFF"
           />

            <TextView
                android:layout_marginLeft="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor4"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/legend_view"
            android:id="@+id/legend5_container"
            android:orientation="horizontal">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/legend5"
                android:background="#FFFFFFFF"
               />

            <TextView
                android:layout_marginLeft="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor5"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/legend_view"
            android:id="@+id/legend6_container"
            android:orientation="horizontal">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/legend6"
                android:background="#FFFFFFFF"
            />

            <TextView
                android:layout_marginLeft="8dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor6"/>
        </LinearLayout>


    </LinearLayout>
</merge>